@@ -3,7 +3,7 @@
 ########################################################################
 # Extension Manager/Repository config file for ext "dix_easylogin".
 #
-# Auto generated 12-12-2011 15:16
+# Auto generated 13-12-2011 18:09
 #
 # Manual updates:
 # Only the data in the array - everything else is removed by next
@@ -29,7 +29,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'clearCacheOnLoad' => 1,
 	'lockType' => '',
 	'author_company' => '',
-	'version' => '0.2.2',
+	'version' => '0.2.3',
 	'constraints' => array(
 		'depends' => array(
 		),
@@ -38,7 +38,7 @@ $EM_CONF[$_EXTKEY] = array(
 		'suggests' => array(
 		),
 	),
-	'_md5_values_when_last_written' => 'a:32:{s:9:"ChangeLog";s:4:"fd0d";s:10:"README.txt";s:4:"30bd";s:12:"ext_icon.gif";s:4:"f9b3";s:17:"ext_localconf.php";s:4:"5098";s:14:"ext_tables.php";s:4:"e256";s:14:"ext_tables.sql";s:4:"08e3";s:28:"ext_typoscript_constants.txt";s:4:"b473";s:24:"ext_typoscript_setup.txt";s:4:"84f7";s:16:"locallang_db.xml";s:4:"ff17";s:14:"doc/manual.sxw";s:4:"76b9";s:33:"pi1/class.tx_dixeasylogin_pi1.php";s:4:"f50c";s:17:"pi1/locallang.xml";s:4:"0ed6";s:29:"res/dope/class.dopeopenid.php";s:4:"d654";s:21:"res/icons/blogger.ico";s:4:"6c92";s:22:"res/icons/facebook.jpg";s:4:"d707";s:20:"res/icons/flickr.ico";s:4:"9bac";s:20:"res/icons/google.gif";s:4:"ca68";s:22:"res/icons/myopenid.ico";s:4:"b22b";s:21:"res/icons/twitter.gif";s:4:"a8b3";s:23:"res/icons/wordpress.ico";s:4:"6cec";s:19:"res/icons/yahoo.ico";s:4:"1698";s:19:"res/oauth/OAuth.php";s:4:"ee05";s:25:"res/yadis/HTTPFetcher.php";s:4:"5138";s:21:"res/yadis/Manager.php";s:4:"5d0a";s:33:"res/yadis/ParanoidHTTPFetcher.php";s:4:"4489";s:23:"res/yadis/ParseHTML.php";s:4:"965f";s:30:"res/yadis/PlainHTTPFetcher.php";s:4:"09c9";s:17:"res/yadis/XML.php";s:4:"09c4";s:18:"res/yadis/XRDS.php";s:4:"85f4";s:19:"res/yadis/Yadis.php";s:4:"7567";s:20:"templates/login.tmpl";s:4:"2f8c";s:19:"templates/xrds.tmpl";s:4:"adfe";}',
+	'_md5_values_when_last_written' => 'a:32:{s:9:"ChangeLog";s:4:"140b";s:10:"README.txt";s:4:"30bd";s:12:"ext_icon.gif";s:4:"f9b3";s:17:"ext_localconf.php";s:4:"5098";s:14:"ext_tables.php";s:4:"e256";s:14:"ext_tables.sql";s:4:"08e3";s:28:"ext_typoscript_constants.txt";s:4:"b473";s:24:"ext_typoscript_setup.txt";s:4:"84f7";s:16:"locallang_db.xml";s:4:"ff17";s:14:"doc/manual.sxw";s:4:"3266";s:33:"pi1/class.tx_dixeasylogin_pi1.php";s:4:"f50c";s:17:"pi1/locallang.xml";s:4:"0ed6";s:29:"res/dope/class.dopeopenid.php";s:4:"d654";s:21:"res/icons/blogger.ico";s:4:"6c92";s:22:"res/icons/facebook.jpg";s:4:"d707";s:20:"res/icons/flickr.ico";s:4:"9bac";s:20:"res/icons/google.gif";s:4:"ca68";s:22:"res/icons/myopenid.ico";s:4:"b22b";s:21:"res/icons/twitter.gif";s:4:"a8b3";s:23:"res/icons/wordpress.ico";s:4:"6cec";s:19:"res/icons/yahoo.ico";s:4:"1698";s:19:"res/oauth/OAuth.php";s:4:"ee05";s:25:"res/yadis/HTTPFetcher.php";s:4:"5138";s:21:"res/yadis/Manager.php";s:4:"5d0a";s:33:"res/yadis/ParanoidHTTPFetcher.php";s:4:"4489";s:23:"res/yadis/ParseHTML.php";s:4:"965f";s:30:"res/yadis/PlainHTTPFetcher.php";s:4:"09c9";s:17:"res/yadis/XML.php";s:4:"09c4";s:18:"res/yadis/XRDS.php";s:4:"85f4";s:19:"res/yadis/Yadis.php";s:4:"7567";s:20:"templates/login.tmpl";s:4:"2f8c";s:19:"templates/xrds.tmpl";s:4:"adfe";}',
 	'suggests' => array(
 	),
 );
