@@ -1,3 +1,6 @@
+2011-12-13 Markus Kappe  <markus.kappe@dix.at>
+	* minor corrections in the manual
+
 2011-12-12 Markus Kappe  <markus.kappe@dix.at>
 	* changed error message "nouser"
 	* bugfix with disabling authentication methods. renamed TS constant "method" to "disable" (with inverse logic)
